# hw_oop

./: .gitignore  README.md  coverage.md  main.py  pyproject.toml
htmlcov/: index.html
src/: __init__.py  class_category.py  class_product.py  from_jason.py
tests/: test_classes.py  tests_classes.py
